--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "typescript": "^4.2.4"
   }
 }
