--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "firebase": "^8.5.0",
     "next": "10.1.3",
+    "next-auth": "^3.20.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
