--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "10.1.3",
     "next-auth": "^3.20.1",
     "react": "17.0.2",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
