--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "aws-sdk": "^2.906.0",
     "firebase": "^8.5.0",
     "next": "10.1.3",
     "next-auth": "^3.20.1",
